# ucosm

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  RT_COMMUNICATION.md  SConstruct  kernel.h  kernel.h~  task-handler.h  traits.h  traits.h~  uscosm-sys-data.h  utils.h
.github/workflows/: build.yml
examples/: Delay.cc  Delay_Buffer.cc  Interval.cpp  Interval_Content.cpp  Priority.cc  Priority.cpp  coroutine_examples.cpp  resumable_task_examples.cpp  time_base.h
include/: task-handler.h
include/modules/: Signal_M.h  Status_M.h
include/ucosm/: IScheduler.h  README.md  cfs_scheduler.hpp  coroutine.hpp  function_scheduler.h  icfs_task.hpp  iperiodic_task.hpp  itask.h  itask.hpp  kernel.h  obj_scheduler.h  periodic_scheduler.hpp  scheduler.hpp  task-handler.h  task_free_function.h  task_function.h  task_object.h  task_object_allocator.h  ucosm_sys_data.cpp  ucosm_sys_data.h  ulink.hpp  void_M.h  void_m.h
include/ucosm/cfs/: cfs_scheduler.hpp  cfs_tick.hpp  icfs_task.hpp
include/ucosm/core/: callable_task.hpp  function_scheduler.hpp  ischeduler.hpp  itask.hpp
include/ucosm/coroutine/: context.cpp  context.hpp  context_arm32.S  context_arm64.S  context_x86_64.S  coroutine_scheduler.hpp  icoroutine.hpp  icoroutine_impl.hpp
include/ucosm/modules/: CPU_Usage_M.h  Coroutine_M.h  Creator_M.h  Delay_M.h  Interval_M.h  LinkedList_M.h  ModuleMix_M.h  Parent_M.h  Priority_M.h  Signal_M.h  Stack_Usage_M.h  conditional_m.h  coroutine_ctx_m.h  coroutine_m.h  cpu_usage_m.h  creator_m.h  delay_m.h  interval_m.h  linked_list_m.h  module_hub_m.h  module_mix_m.h  parent_m.h  priority_m.h  processq_m.h  signal_m.h  stack_usage_m.h  status_m.h  ucosm-sys-data.h
include/ucosm/modules/utils/: MemPool_32.h  mem_pool.h  mem_pool_32.h  uFifo.h  u_fifo.h
include/ucosm/periodic/: icoroutine.hpp  iperiodic_task.hpp  periodic_scheduler.hpp  periodic_tick.hpp  tick.hpp
include/ucosm/resumable/: iresumable_task.hpp  ithread.h
include/ucosm/rt/: irt_timer.hpp  rt_communication_example.hpp  rt_message_queue.hpp  rt_scheduler.cpp  rt_scheduler.hpp
include/ucosm/timer/: ifiber.hpp  itimer_task.hpp  timer_scheduler.hpp
include/ucosm/utils/: mem_pool.h
src/: IScheduler.h  kernel.cpp  kernel.h  kernel.h~  modules.h  modules.h~  task-handler.h  task-handler.h~  traits.h  traits.h~  uscosm-sys-data.h~  utils.h~
src/modules/: Analyzer_M.h  Analyzer_M.h~  AutoProcessQ_M.h  AutoProcessQ_M.h~  Buffer_M.h  Buffer_M.h~  CPU_Usage_M.h  CPU_Usage_M.h~  Conditional_M.h  Conditional_M.h~  Content_M.h  Coroutine_M.h  Coroutine_M.h~  Coroutine_Macros.h  Coroutine_Macros.h~  Coroutine_ctx_M.h  Coroutine_ctx_M.h~  Delay_M.h  Delay_M.h~  Interval_M.h  Interval_M.h~  LinkedList_M.cpp  LinkedList_M.cpp~  LinkedList_M.h  LinkedList_M.h~  Lockable_M.h  Lockable_M.h~  MemAllocator_M.h~  MemPool32_M.h  MemPool32_M.h~  ModuleHub_M.h  ModuleHub_M.h~  ModuleKit_M.h  ModuleKit_M.h~  ModuleMix_M.h  Parent_M.h  Parent_M.h~  Periodic_M.h  Priority_M.h  Priority_M.h~  (+27 more)
src/modules/WIP/: MemAllocator_M.h  MemAllocator_M.h~  Order_M.h  Order_M.h~  ProcessCounter_M.cpp~  ProcessCounter_M.h~  TaskCounter_M.h  __IModule.h  __ucosm-sys-data.cpp
src/modules/utils/: Fifo.h  IMemPoolBase.h  IMemPoolBase.h~  MemBlock32 .cpp  MemBlock32 .cpp~  MemBlock32.h  MemPool32 .cpp  MemPool32 .cpp~  MemPool32.h~  ObjectCounter.h  uFifo.h
test/: README.md  SConscript  test_creator.h  test_delay.h  test_function_scheduler.h  test_mem_pool.h  test_mem_pool_32.h  test_priority.h  test_task_function.h  test_task_handler.h  test_task_object_allocator.h  test_uCoSM.cpp  time_base.h
tests/: CMakeLists.txt  callable_test.cpp  cfs_test.cpp  coroutine_test.cpp  fiber_test.cpp  member_test.cpp  periodic_test.cpp  resumable_test.cpp  rt_test.cpp  tests.cpp  tests.hpp  thread_test.cpp  timer_test.cpp
ucosm/: kernel.h  task-handler.h
ucosm/modules/: ModuleHub_M.h
